force-app/main/default/objects/Comercial__c/Comercial__c.object-meta.xml
<CustomObject>
    <label>Comercial</label>
    <nameField>
        <label>FirstNameComercial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comerciales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>