force-app/main/default/objects/Comercial__c/fields/CompanyComercial__c.field-meta.xml
<CustomField>
    <fullName>CompanyComercial__c</fullName>
    <description>Lista dependiente compañias</description>
    <label>CompanyComercial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>company_list</valueSetName>
    </valueSet>
</CustomField>