force-app/main/default/objects/Comercial__c/fields/EmailComercial__c.field-meta.xml
<CustomField>
    <fullName>EmailComercial__c</fullName>
    <description>Email del comercial</description>
    <label>EmailComercial</label>
    <type>Email</type>
</CustomField>