force-app/main/default/objects/Comercial__c/fields/SalesOfficeComercial__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeComercial__c</fullName>
    <label>SalesOfficeComercial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesOrgComercial__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>sales_office2</valueSetName>
    </valueSet>
</CustomField>