force-app/main/default/objects/Comercial__c/fields/SalesOrgComercial__c.field-meta.xml
<CustomField>
    <fullName>SalesOrgComercial__c</fullName>
    <label>SalesOrgComercial</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CompanyComercial__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>sales_orgs</valueSetName>
    </valueSet>
</CustomField>